--- a/html/home.html
+++ b/html/home.html
@@ -1,21 +1,15 @@
-	<header id="header"><h1>FalconGate</h1></header>
+<h1>Home</h1>
 
-	<div id="container">
+Welcome to FalconGate!<br><br>
 
-		<main id="center" class="column">
-			<article>
+Change the default password after the first logon to the application.
+<br><br>
+Navigate to the <a href="read_config.php">"Configuration"</a> page and fill in the correct fields.<br>
+This configuration it's not mandatory but highly desired if you want to unleash FalconGate's full power. In order to obtain a free VirusTotal API key you must register at <a href="https://www.virustotal.com/" target="_blank">VirusTotal</a>.
+<br><br>
+<h2>Deployment</h2>
 
-				<p>
-<pre>                                                                      
-@@@  @@@  @@@  @@@@@@@@  @@@        @@@@@@@   @@@@@@   @@@@@@@@@@   @@@@@@@@  
-@@@  @@@  @@@  @@@@@@@@  @@@       @@@@@@@@  @@@@@@@@  @@@@@@@@@@@  @@@@@@@@  
-@@!  @@!  @@!  @@!       @@!       !@@       @@!  @@@  @@! @@! @@!  @@!       
-!@!  !@!  !@!  !@!       !@!       !@!       !@!  @!@  !@! !@! !@!  !@!       
-@!!  !!@  @!@  @!!!:!    @!!       !@!       @!@  !@!  @!! !!@ @!@  @!!!:!    
-!@!  !!!  !@!  !!!!!:    !!!       !!!       !@!  !!!  !@!   ! !@!  !!!!!:    
-!!:  !!:  !!:  !!:       !!:       :!!       !!:  !!!  !!:     !!:  !!:       
-:!:  :!:  :!:  :!:        :!:      :!:       :!:  !:!  :!:     :!:  :!:       
- :::: :: :::    :: ::::   :: ::::   ::: :::  ::::: ::  :::     ::    :: ::::  
-  :: :  : :    : :: ::   : :: : :   :: :: :   : :  :    :      :    : :: ::                                                                            
- </pre>
-                </p>
+Some important considerations to keep in mind when deploying FalconGate to a real environment: home or production network.
+<br><br>
+<li>Change the default SSH password in your Raspberry Pi or Banana Pi devices</li>
+<li>Regenerate the openssh-server certificates for SSH encryption</li><br>
