Added reset button to the webgui plus other improvements to the user interface

--- a/html/home.html
+++ b/html/home.html
@@ -5,7 +5,7 @@ Welcome to FalconGate!<br><br>
 Change the default password after the first logon to the application.
 <br><br>
 Navigate to the <a href="read_config.php">"Configuration"</a> page and fill in the correct fields.<br>
-This configuration it's not mandatory but highly desired if you want to unleash FalconGate's full power. In order to obtain a free VirusTotal API key you must register at <a href="https://www.virustotal.com/" target="_blank">VirusTotal</a>.
+This configuration it's not mandatory but highly desired if you want to unleash FalconGate's full power. We recommend registering with our <a href="http://eepurl.com/cHtpQj">free cloud API</a> to obtain a key which enables advanced features in your FalconGate device like receiving regular updates containing block lists of Malware domains and IP addresses and centralized alert reporting over email and Telegram from our cloud servers.
 <br><br>
 <h2>Deployment</h2>
 
