Minor change in platform naming

--- a/html/home.html
+++ b/html/home.html
@@ -1,15 +1,15 @@
 <h1>Home</h1>
 
-Welcome to FalconGate!<br><br>
+Welcome to Falcongate!<br><br>
 
 Change the default password after the first logon to the application.
 <br><br>
 Navigate to the <a href="read_config.php">"Configuration"</a> page and fill in the correct fields.<br>
-This configuration it's not mandatory but highly desired if you want to unleash FalconGate's full power. We recommend registering with our <a href="http://eepurl.com/cHtpQj">free cloud API</a> to obtain a key which enables advanced features in your FalconGate device like receiving regular updates containing block lists of Malware domains and IP addresses and centralized alert reporting over email and Telegram from our cloud servers.
+This configuration it's not mandatory but highly desired if you want to unleash Falcongate's full power. We recommend registering with our <a href="http://eepurl.com/cHtpQj">free cloud API</a> to obtain a key which enables advanced features in your Falcongate device like receiving regular updates containing block lists of Malware domains and IP addresses and centralized alert reporting over email and Telegram from our cloud servers.
 <br><br>
 <h2>Deployment</h2>
 
-Some important considerations to keep in mind when deploying FalconGate to a real environment: home or production network.
+Some important considerations to keep in mind when deploying Falcongate to a real environment: home or production network.
 <br><br>
 <li>Change the default SSH password in your Raspberry Pi or Banana Pi devices</li>
 <li>Regenerate the openssh-server certificates for SSH encryption</li><br>
