Minor change to documentation

--- a/html/home.html
+++ b/html/home.html
@@ -11,5 +11,6 @@ This configuration it's not mandatory but highly desired if you want to unleash 
 
 Some important considerations to keep in mind when deploying Falcongate to a real environment: home or production network.
 <br><br>
-<li>Change the default SSH password in your Raspberry Pi or Banana Pi devices</li>
-<li>Regenerate the openssh-server certificates for SSH encryption</li><br>
+<li>Change the default SSH password in your Falcongate device</li>
+<li>Change the default password for the web console admin user</li>
+<li>Regenerate the openssh-server certificates for SSH encryption if Falcongate was deployed from an OVA image</li><br>
